@startuml

title __THIRD LAB's Class Diagram__\n

  package  {
    class CommandManager {
    }
  }
  

  package  {
    class Configurator {
    }
  }
  

  package  {
    class Driver {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    class MemoryManager {
    }
  }
  

  package  {
    class Page {
    }
  }
  

  package  {
    class Process {
    }
  }
  

  package  {
    class Variable {
    }
  }
  

  Driver -up-|> Runnable
  Driver o-- CommandManager : commandManager
  Page o-- Variable : variable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
